# fakecopy

./: .gitignore  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
src/fakecopy/: __init__.py  dummy.py  dummy_data.py  generate_dummy_data.py  summarise_dataframe.py
tests/: test_dummy.py  test_generate_dummy_data.py  test_summarise_dataframe.py
