[tool.poetry]
name = "fakecopy"
version = "0.1.0"
description = "A Python package for generating synthetic tabular data."
authors = ["Alasdair Warwick <alasdair.warwick.19@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = ["tests"]
